ReactApp-Manifests/blue/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: blue
  labels:
    app: react-app
    env: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
      env: blue
  template:
    metadata:
      labels:
        app: react-app
        env: blue
    spec:
      containers:
      - name: react-app
        image: surendradev101/react-app:53af4693ba16ec8da7ada1f3f5ea342b0c75b0c9
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
