ReactApp-Manifests/blue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app
  namespace: blue
  labels:
    app: react-app
    env: blue
spec:
  selector:
    app: react-app
    env: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
